Updated arrow SVGs and styling Using css transforms on IE is not respected correctly so using seperate SVG that has already been rotated

--- a/site/pages/about-us/social-slice/intro-desktop-tile/styles.css
+++ b/site/pages/about-us/social-slice/intro-desktop-tile/styles.css
@@ -10,19 +10,18 @@
   background: badgerBlack;
   color: badgerWhite;
 }
-
+.buttons{
+  display: flex;
+}
 .prevButton, .nextButton{
   background: transparent;
   border: none;
 }
 
-.prevArrow svg{
-  transform: rotateX('180');
-  width: 50px;
-}
-
+.prevArrow svg,
 .nextArrow svg{
-  width: 50px;
+  width: 25px;
+  height: 25px
 }
 
 @media mediumScreen{
