--- a/site/pages/about-us/social-slice/intro-mobile-tile/styles.css
+++ b/site/pages/about-us/social-slice/intro-mobile-tile/styles.css
@@ -1,5 +1,5 @@
 @value badgerBlack, badgerWhite, daveGreen, stuBlue, yoloPurple from "../../../../css/_colors.css";
-@value maxWidth, largeScreen, mediumScreen from "../../../../css/_sizes.css";
+@value maxWidth, largeScreen, mediumScreen, smallScreen from "../../../../css/_sizes.css";
 
 .intro {
   composes: card from "../styles.css";
@@ -21,5 +21,6 @@
 @media mediumScreen{
   .intro{
     display: none;
+    width: 0px;
   }
 }
