--- a/site/pages/about-us/social-slice/styles.css
+++ b/site/pages/about-us/social-slice/styles.css
@@ -8,6 +8,7 @@
 .cards {
   max-width: 1035px;
   margin-left: 0px;
+  display: flex;
 }
 
 .card {
